# PSBW

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  GameSettings.yaml  LICENSE  README.md  iso.xml  system.cnf
.github/workflows/: cmake-single-platform.yml
assets/: 3dtest.fdg  bundle.fdg
assets/sounds/: boing.vag
assets/tetrisfudge/: 3Dtest.json  3dtest.fdg  cube.bwm  game.fdg  gamebg.xcf  menu.fdg  menubg.xcf
assets/tetrisfudge/psxris/: game.json  menu.json
cmake/: defines.cmake  executable.ld  setup.cmake
game/: main.cpp  pieces.h
game/scenes/: MainMenu.cpp  MainMenu.h  Psxris.cpp  Psxris.h  Test3D.cpp  Test3D.h
inc/: card.h  cdread.h  cdrom.h  draw.h  filesystem.h  gte.h  interrupts.h  sio0.h  vsync.h
inc/game/: game.h
inc/ps1/: registers.h  system.h
inc/psbw/: BWM.h  Camera.h  Component.h  Controller.h  Font.h  GameObject.h  Manager.h  Mesh.h  Scene.h  Sound.h  Sprite.h  Text.h  Texture.h  cdread.h  cdrom.h  draw.h  filesystem.h  font.h  fudgebundle.h  interrupts.h  manager.h  settings.h  sio.h
lib/ps1/: system.c  system.s  unhandledexc.c
lib/psbw/: sio.cpp
src/: Component.h  Controller.cpp  GameObject.cpp  GameObject.h  Scene.cpp  Sound.cpp  Sprite.cpp  Sprite.h  Text.cpp  card.cpp  cdmisc.c  cdread.c  cdrom.c  draw.cpp  draw.h  filesystem.c  filesystem.cpp  font.cpp  fudgebundle.cpp  gte.c  interrupts.c  main.cpp  manager.cpp  sio.cpp  sio0.cpp  vector.h  vsync.c
src/psbw/: Controller.cpp  Font.cpp  Fudgebundle.cpp  GameObject.cpp  Manager.cpp  Mesh.cpp  Scene.cpp  Sio.cpp  Sound.cpp  Sprite.cpp  Text.cpp
